@@ -317,7 +317,7 @@ in the bottom-right corner of the content area */
 	margin-right: auto;
 }
 /* small for tables and similar */
-.small, .small * {
+.small {
 	font-size: 94%;
 }
 table.small {
